# mean-field-glm

./: .gitignore  README.md  mcmc_order_parameters_vs_kappa_cbbs_beta.npy  mf-key  mf-key.pub  order_parameters_vs_kappa_beta.csv  order_parameters_vs_kappa_mismatch.csv  order_parameters_vs_snr.csv  order_parameters_vs_snr_fixed_sigma_gaussian_rademacher.csv  pyproject.toml  test_noise.py
bayesian_glm/: __init__.py  model.py  noise.py
mean-field-model/: auxiliary.py  block_computation.py  fixed_point.py  graphs.py  mean_field.py  probabilistic_model.py
mean_field_glm/: __init__.py  block_beta_computation.py  block_computation.py  block_gaussian_computation.py  graphs.py  marginal.py  mean_field_MLE.py  model.py  model_beta.py  model_gaussian.py
mean_field_model/: .~lock.Computed data.csv#  Computed data.csv  __init__.py  block_computation.py  graphs.py  mean_field.py
simulation-results/: Bayes_simulations_gamma.csv  Bayes_simulations_kappa.csv  MLE_simulations_gamma.csv  bayes_vs_kappa.csv  comparison_mle_bayes_gamma.csv  comparison_mle_bayes_kappa.csv  comparison_mle_gamma_variable_sigma_gaussian.csv  comparison_mle_kappa_gaussian_rademacher.csv  comparison_mle_snr_variable_sigma_gaussian.csv  gauss_rademacher_mse_data.csv  logistic_beta_beta_kappa.csv  logistic_beta_beta_kappa.json  logistic_normal_normal_snr.csv  mcmc_order_parameters_vs_kappa_bayes_opt_gaussian.csv  mcmc_order_parameters_vs_kappa_beta.csv  mcmc_order_parameters_vs_kappa_gauss_rademacher.csv  mcmc_order_parameters_vs_snr_fixed_sigma_gaussian_rademacher.csv  mle_simulations_gamma.csv  (+16 more)
(+49 files in other folders)
