[tool.poetry]
name = "logisticmeanfield"
version = "0.1.0"
description = ""
authors = ["nuez-semanal <saenz.manuel@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.23"  # Compatible with pytensor and pymc
pymc = "^5.18.2"
matplotlib = "^3.9.2"
ipython = "^8.29.0"
gitpython = "^3.1.45"
numpyro = "^0.19.0"
scipy-stubs = "~=1.16.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"